paperless-ngx/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: default
spec:
  selector:
    matchLabels:
      app: paperless
  replicas: 1
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
      - name: paperless
        image: lscr.io/linuxserver/paperless-ngx:latest
        imagePullPolicy: Always
        ports:
        - name: paperless-port
          containerPort: 8000
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: paperless-data
        - mountPath: /usr/src/paperless/consume
          name: paperless-incoming
        - mountPath: /usr/src/paperless/export
          name: paperless-export
        resources:
          limits:
            cpu: "1000m"
            memory: "512Mi"
          requests:
            cpu: "50m"
            memory: "256Mi"
      volumes:
      - name: paperless-data
        nfs:
          server: 10.10.9.14
          path: /mnt/Storage/apps/paperless/data
      - name: paperless-incoming
        nfs:
          server: 10.10.9.14
          path: /mnt/Storage/apps/paperless/incoming
      - name: paperless-export
        nfs:
          server: 10.10.9.14
          path: /mnt/Storage/apps/paperless/export

      - name: paperless-config
        persistentVolumeClaim:
          claimName: paperless-config-pvc
      restartPolicy: Always
