paperless-ngx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-service
  namespace: default
spec:
  selector:
    app: paperless
  ports:
    - protocol: TCP
      port: 80
      targetPort: paperless-port
  type: LoadBalancer
